--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     <meta name="description" content="Платформа для общественных кампаний" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>GreenCause</title>
+    <title>VoiceMatters</title>
 
-    <link rel="stylesheet" href="./assets/fonts/Inter/inter.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/fonts/Inter/inter.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
